--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
+html {
+  font-size: 62.5%;  
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  margin: 0;
+  font-family: 'Cormorant Garamond', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
 }
