--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -31,6 +31,7 @@
             a {
                 text-decoration: none;
                 color: $color-light;
+                font-weight: 500;
             }
 
             a:hover {
