style: troca de estilos gerais da aplicação

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $color-darkblue: #0a4174;
-$color-blue: #49769f;
+$color-blue: #49639f;
 $color-lightblue: #7bbde8;
 $color-light: #bdd8e9;
-$color-secondary: #f7ad19;
+$color-secondary: #de980b;
