--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 62.5%;  
+  font-size: 62.5%;
 }
 
 * {
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Cormorant Garamond', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
