--- a/src/components/About/styles.scss
+++ b/src/components/About/styles.scss
@@ -60,3 +60,53 @@
         }
     }
 }
+
+@media (max-width: 800px) {
+    .container-about {
+        padding: 24px;
+        color: $color-light;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: calc(100vh - 70px);
+
+        .about-image {
+            img {
+                width: 200px;
+                border-radius: 50%;
+                border: 1.5px solid $color-secondary;
+                margin-right: 0px;
+            }
+        }
+
+        .about-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex-direction: column;
+
+            .content-text {
+                width: 100%;
+
+                h1 {
+                    font-size: 2.8rem;
+                    margin-bottom: 12px;
+                }
+
+                p {
+                    margin-bottom: 12px;
+                    font-size: 1.4rem;
+                    line-height: 30px;
+                }
+            }
+
+            .content-image {
+                img {
+                    width: 30px;
+                    margin-right: 10px;
+                }
+
+            }
+        }
+    }
+}
